--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build": "expo export:web"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.4.0",
+    "@expo-google-fonts/roboto": "^0.4.0",
     "@expo/vector-icons": "^14.1.0",
+    "@react-google-maps/api": "^2.20.7",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -25,15 +30,16 @@
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.9.0",
     "expo": "^53.0.0",
+    "expo-av": "~15.1.7",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.1.8",
     "expo-file-system": "~18.1.10",
-    "expo-font": "~13.0.4",
+    "expo-font": "~13.3.2",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.0.5",
-    "expo-location": "~18.1.5",
+    "expo-location": "~18.1.6",
     "expo-router": "~4.0.20",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.29.24",
@@ -41,24 +47,26 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
+    "leaflet": "^1.9.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "1.20.1",
     "react-native-pager-view": "6.5.1",
+    "react-native-pell-rich-editor": "^1.10.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
+    "react-native-web": "^0.19.13",
     "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~19.0.10",
+    "@types/react": "^18.3.23",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "~29.7.0",
